--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
   <template class="Package" parent="AdwActionRow">
     <property name="title" translatable="yes">Package Name</property>
     <property name="subtitle" translatable="yes">Package Description</property>
-    <property name="package">package</property>
+    <property name="switch-default">False</property>
     <property name="icon-file">icon.png</property>
     <property name="activatable">True</property>
     <property name="selectable">False</property>
@@ -16,9 +16,9 @@
         <property name="valign">center</property>
         <property name="margin-end">12</property>
         <property name="margin-start">12</property>
-        <property name="active">False</property>
         <signal name="toggled" handler="toggle_package" swapped="no"/>
       </object>
     </child>
+    <callback name="update_defaults" handler="on_update_defaults" />
   </template>
 </interface>
