finished music production, added rpmfusion required flag

--- a/package.xml
+++ b/package.xml
@@ -27,5 +27,6 @@
     <signal name="notify::switch-default" handler="on_update_defaults" />
     <signal name="notify::iconfile" handler="on_update_defaults" />
     <signal name="notify::iconname" handler="on_update_defaults" />
+<!--    <signal name="notify::"-->
   </template>
 </interface>
